--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" sizes="any" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Town</title>
+    <title>AI Lab</title>
     <meta
       name="description"
-      content="A virtual town where AI characters live, chat and socialize"
+      content="A simulated environment for AI agents to interact with each other."
     />
     <script src="https://www.googletagmanager.com/gtag/js?id=G-BE1B7P7T72" />
     <script id="google-analytics">
